[package]
name = "marusora"
version = "0.1.0"
authors = ["kawakami <kawakami.ozone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.2.0"
log = "0.4.14"
rand = "0.8.3"
tui = "0.14"
termion = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
